# jx-toolbox-mini

./: .gitignore  CLAUDE.md  app.json  package-lock.json  package.json
components/tabbar/: tabbar.wxml
components/tool-icon/: tool-icon.js
components/ui-icon/: ui-icon.js  ui-icon.wxml
jx-toolbox-mini/: app.js  app.wxss  project.config.json
jx-toolbox-mini/utils/: calc.js  color.js  image-mosaic.js  number.js  qrcode.js  unit.js
jx-toolbox-web/: .gitignore  README.md  pyproject.toml  start_server.py
jx-toolbox-web/backend/: .env.example  __init__.py  requirements.txt
jx-toolbox-web/backend/app/: __init__.py  main.py
jx-toolbox-web/backend/app/api/: __init__.py  deps.py
jx-toolbox-web/backend/app/api/v2/: __init__.py  auth.py  deepseek.py  tool_settings.py  users.py  weight.py
jx-toolbox-web/backend/app/config/: __init__.py  database.py  settings.py
jx-toolbox-web/backend/app/middleware/: __init__.py  error_handler.py
jx-toolbox-web/backend/app/models/: __init__.py
jx-toolbox-web/backend/app/repositories/: __init__.py
jx-toolbox-web/backend/app/schemas/: __init__.py  auth.py  common.py  tools.py
jx-toolbox-web/backend/app/services/: __init__.py  auth_service.py  database_service.py  tool_settings_service.py
jx-toolbox-web/backend/app/tools/: __init__.py  deepseek.py  image_mosaic.py  image_processing.py  pdf_processing.py  storage.py  watermark.py  weight.py
jx-toolbox-web/ui/: app.js  index.html  styles.css
pages/category/: category.js  category.json  category.wxml  category.wxss
utils/: case.js  data.js  text.js  time.js
(+17 files in other folders)
