[project]
name = "personal-toolbox"
version = "0.2.0"
description = "Platformized personal toolbox with FastAPI backend and static UI."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

